--- a/CSS-GRID-PROJECT.css
+++ b/CSS-GRID-PROJECT.css
@@ -7,6 +7,8 @@ header {
     font-family: system-ui, sans-serif;
     color: #000;
 }
+#filler {max-width: 20vw;
+}
 .quote {
     text-align: center;
 }
