--- a/CSS-GRID-PROJECT.css
+++ b/CSS-GRID-PROJECT.css
@@ -7,7 +7,12 @@ header {
     font-family: system-ui, sans-serif;
     color: #000;
 }
-#filler {max-width: 20vw;
+#filler {
+    max-width: 24vw;
+}
+p {
+    margin: 0 auto;
+    padding: 1vh 0;
 }
 .quote {
     text-align: center;
@@ -21,7 +26,7 @@ h2 {
 .logo {
     width: 2rem; 
     height: 2rem; 
-    margin-bottom: 2%;
+    margin: 4% 0;
 }
 .quote-author {
     text-align: center;
@@ -38,7 +43,7 @@ h2 {
 }
 body {
     display: grid; 
-    grid-template-columns: 20% 40% 25%; 
+    grid-template-columns: 25% 40% 20%; 
     gap: 3rem;
 }
 .test {
@@ -49,10 +54,11 @@ body {
     max-width: 300px; 
     display: flex;
 }
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 900px) {
     body {
         display: grid; 
         grid-template-columns: 1fr;
+        text-align: center;
     } 
     .test {
         display: flex;
